# fullon

./: .gitignore  .runtests.swp  LICENSE  README.md  backup_crawler.py  backup_ohlcv.py  crawler_backup.sql  isolated_tests_results.txt  pyproject.toml  requirements.txt  runtests
fullon/: .~lock.results.csv#  .~lock.results.ods#  backupdb.py  bot_live_testing.py  error.txt  fullon.py  fullon_ctl.py  fullon_daemon.py  fullon_install.py  fullon_secrets.py  fullon_simulator.py  fullon_test.py  minitest.py  miniteststuff.py  mmm.txt  results_feed_0.xls  runs  test.py  test2.py  todo  tofix
fullon/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
fullon/conf/: fullon.conf  fullon.conf.example  keynames
fullon/diagramer/: pyproject.toml  system_architecture  test.py
fullon/install/: base.sql  crawler.dbm  crawler.sql  fullon.dbm  fullon_CwUxeF.dbk
fullon/libs/: bot.py  bot_launcher.py  bot_status.py  cache.py  calculations.py  connection_pg_pool.py  database.py  database_helpers.py  database_ohlcv.py  exchange.py  exchange_methods.py  log.py  ohlcv_loader.py  order_methods.py  queue_pool.py  secret.py  settings.py  simul.py  simul_launcher.py  simulator_prompts.py
fullon/plugins/: predictors.py
fullon/predictors/: reg_xgb_forest_mom_long_BTC_USD_1_Days_2009-02-13_23:31:30.123000_to_2023-01-09_00:00:00+00:00_CatBoostClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_2009-02-13_23:31:30.123000_to_2023-01-09_00:00:00+00:00_GradientBoostingClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_2009-02-13_23:31:30.123000_to_2023-10-16_00:00:00+00:00_CatBoostClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_2009-02-13_23:31:30.123000_to_2023-10-16_00:00:00+00:00_GradientBoostingClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_2009-02-13_23:31:30.123000_to_2024-02-26_00:00:00+00:00_CatBoostClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_2009-02-13_23:31:30.123000_to_2024-02-26_00:00:00+00:00_GradientBoostingClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_CatBoostClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_1_Days_GradientBoostingClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_30_Minutes_CatBoostClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_30_Minutes_GradientBoostingClassifier.joblib  reg_xgb_forest_mom_long_BTC_USD_3_Minutes_2024-02-13_23:31:30_to_2024-07-29_00:00:00+00:00_CatBoostClassifier.joblib  reg_xgb_forest_mom_long_ETH_USD_1_Days_CatBoostClassifier.joblib  scaler_xgb_forest_mom_long_BTC_USD_1_Days.joblib  (+35 more)
test_images/: test.py
tests/: conftest.py  test_accounts.py  test_accounts_cache.py  test_bitmex_interface.py  test_bot.py  test_bot_launcher.py  test_bot_manager.py  test_bot_status.py  test_bots_cache.py  test_bots_model.py  test_cache.py  test_calculations.py  test_ccxt_interface.py  test_crawler_cache.py  test_crawler_manager.py  test_crawler_model.py  test_ctl_bot.py  test_ctl_strategy.py  test_ctl_symbols.py  test_ctl_users.py  test_database.py  test_database_ohlcv.py  test_drylive_strategy.py  test_exchange.py  test_exchange_cache.py  test_exchange_methods.py  test_exchange_model.py  test_fullonbroker.py  test_fullonfeed.py  test_fullonstore.py  test_install_manager.py  test_kraken_websockets.py  test_kraken_zinterface.py  test_kucoinfutures_interface.py  test_libs_crawler_apify.py  test_messenger_twitter.py  test_ohlcv_manager.py  test_orders_cache.py  test_orders_methods.py  test_predictor_tools.py  (+18 more)
web/: start.py  test_fullon_web.py
(+148 files in other folders)
